--- a/client/src/components/staff/Staff.css
+++ b/client/src/components/staff/Staff.css
@@ -13,7 +13,7 @@
   }
 
 .staff-box{
-  border: 2px solid black;
+  /* border: 2px solid black; */
   height: 300px;
   width: 300px;
   display: flex;
